[gd_scene load_steps=2 format=3 uid="uid://c0en6jwj481vt"]

[ext_resource type="Script" path="res://Scene/Trade/Script/TradeUI/goods_list.gd" id="1_4x8wb"]

[node name="GoodList" type="PanelContainer"]
offset_right = 600.0
offset_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4x8wb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GoodsList" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="VBoxContainer/GoodsList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="CashLabel" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "现金:999"
